--- a/inchroduckshun/index.html
+++ b/inchroduckshun/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
     <head>
-        <meta charset="utf-8"
-        <title>Portfolio</title>  
+        <title>Caleb's Portfolio</title>
+        <meta charset="utf-8">
+        
     </head>
    <body>
     <h1>Portfolio Page One</h1>
