--- a/inchroduckshun/index.html
+++ b/inchroduckshun/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 
     <head>
-        <title>Caleb's Portfolio</title>
         <meta charset="utf-8">
+        <title>Caleb's Portfolio</title>
         
-    </head>
+         </head>
    <body>
     <h1>Portfolio Page One</h1>
-
+    <hr>
+    <h2> RAnDom THINGS <h2>
+        <p> he venom is produced in the crural glands of the male, which are kidney-shaped alveolar glands located in the upper thigh, and delivered through a spur, or calcar, on each hind limb. Female platypuses, in common with echidnas, have rudimentary spur buds that do not develop (dropping off before the end of their first year) and lack functional crural glands.[3] The spur is attached to a small bone that allows articulation; the spur can move at a right angle to the limb allowing a greater range of attack than a fixed spur would allow.[4] The spur normally lies flat against the limb but is raised when required.[5]
+        <p>The platypus is one of the few living mammals to produce venom. The venom is made in venom glands that are connected to hollow spurs on their hind legs; it is primarily made during the mating season.[1] While the venom's effects are described as extremely painful, it is not lethal to humans. Many archaic mammal groups possess similar tarsal spurs, so it is thought that, rather than having developed this characteristic uniquely, the platypus simply inherited this characteristic from its antecedents. Rather than being a unique outlier, the platypus is the last demonstration of what was once a common mammalian characteristic, and it can be used as a model for non-therian mammals and their venom delivery and properties.[2]</p>
+        img src= "unicorn.png"
+    </h2>
    </body>
 </html>
