--- a/html5/about.html
+++ b/html5/about.html
@@ -11,15 +11,16 @@
 </body>
     <div id="container">
         <header>
-            <h1>Bespoke Brand Overview </h1>
+            <h1>Bespoke Visual Identity</h1>
         </header>
         <hr>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Bespoke</a>
+            <hr>
         </nav>
         <main>
-            <h2>Bespoke's Packaging and Logog</h2>
+            <h2>Bespoke's Packaging and Logo</h2>
             <p>Over the years, Bespoke has evolved into a cohesive and vibrant brand, its visual identity fluently lending itself to the many branches and products under the Bespoke name. At once rugged, minimalist, classic, and clean, the Bespoke Logo in all its forms is an integral part of the Brand's success. </p>
             <hr>
             <img src="images/bespokebrownbackground1.png" alt="Bespoke Logo">
