--- a/html5/index.html
+++ b/html5/index.html
@@ -19,15 +19,18 @@
         </nav>
         <main>
             <h2>Welcome to Bespoke</h2>
+            <p>What is Bespoke? Bespoke is a health food brand made with action in mind. It's a brand for the explorers; for adventurers, hikers and whitewater rafters. Those who have no time for nonsense, superfluous ingredients and fancy packaging. When packing for your next big exploration, you know every ounce of weight matters. That's why you pack a Bespoke Trek Bar, famed for the most long-lasting energy and endurance benefits for any other bar of its size. And with sustainably sourced, vegan, eco-freindly ingredients, you're not only doing your body a favor but also your planet. </p>
             <hr>
             <h3>Bespoke History</h3>
         <p>Bespoke entered the playing field as a health food powerhouse in the ealry 1900s. Their flagship product, the Trek Bar, soon catapulted them into international renown. Their subsequent products, including a line of cereal, coffee, and low calorie bread, secured their place on the market as a competitive force to be reckoned with in the world of nutritional snack food.</p>
     <img src="images/BESPOKE_MOCKUP_SPACE-Current View.png" alt="Bespoke_Mockup">
     <hr>
+    <p>Bespoke was of course not without its competitors. Clif Bar and RX Bar had similar brand positioning to Bespoke and the Trek bar. Thus a great advertising battle was born. Ads and billboards for each brand would subtly cast jeers and slights at their competitors until an uneasy truce was made in 2004. With tensions rising in the new campaigns launched by both RX Bar and Bespoke, it's difficult to say how long this truce will stand.</p>
     <ul>
         <li><a href="https://www.clifbar.com/" target="_blank">Clif Bar</a></li>
         <li><a href="https://shop.rxbar.com/shop/protein-bars.html?gad_source=1&gclid=CjwKCAjwtqmwBhBVEiwAL-WAYeqirl-Q05HJns-FDZyliGBhSbBx0_ibllT-9_lMRQls_xWuN2Tg1xoCvpQQAvD_BwE&gclsrc=aw.ds" target="_blank">RX Bar</a></li>
     </ul>
+    <p> At the end of the day, we at Bespoke want what you want. We want you to have the fuel you need to sustain your next adventure. It isn't about how many likes you'll get or how good you'll look while doing it, it's about the doing. That's what we stand for at Bespoke. Ever since the beginning, we've stood for the doers. For the movers and shakers, the visionaries who aren't afraid of a little dirt under their fingernails. So go now and explore, and do it fueled by Bespoke. </p>
 </main>
         <footer>&copy;2024 Bespoke Inc.</footer>
         
