--- a/adv_css/housing.html
+++ b/adv_css/housing.html
@@ -35,7 +35,7 @@
 </body>
 <nav>
         <ul>
-            <li> <a href="home.html">Home</a></li>
+            <li> <a href="index.html">Home</a></li>
             <li> <a href="transport.html">Transportation</a></li>
             <li><a href="food.html">Food</a></li>
             <li><a href="housing.html">Housing</a></li>
